💄 prevent pp being too big

--- a/css/main.css
+++ b/css/main.css
@@ -176,8 +176,8 @@ header.description::after {
   margin-top: 1em;
   width: 50vmin;
   height: 50vmin;
-  max-width: 400px;
-  max-height: 400px;
+  max-width: 256px;
+  max-height: 256px;
   border-radius: 50%;
   box-shadow: var(--profile-shadow, var(--material-shadow-2));
   left: 50%;
